fixed navigation tab alignment

--- a/src/Portfolio.css
+++ b/src/Portfolio.css
@@ -15,6 +15,3 @@
     font-size: 160px;
 }
 
-.tabsContainer {
-    flex-wrap: wrap;
-}
